--- a/style.css
+++ b/style.css
@@ -351,7 +351,7 @@ body {
 
 .info a {
     display: flex;
-    padding: 10px 0;
+    padding: 10px;
     gap: 10px;
     text-decoration: none;
 }
@@ -360,7 +360,6 @@ body {
     box-shadow:
     0 2px 8px rgba(0, 0, 0, 0.527),
     0 8px 20px rgba(0, 0, 0, 0.521);
-    padding: 10px;
     border-radius: 10px;
 }
 
@@ -685,9 +684,9 @@ h2 {
     }
 
     .info a img {
-        width: 80px;
-        height: 80px;
-        object-fit: cover;
+        width: 150px;
+        height: 150px;
+        object-fit: contain;
     }
 
     .judul {
