--- a/style.css
+++ b/style.css
@@ -93,6 +93,25 @@ body {
     text-decoration: none;
     font-weight: 500;
     font-size: 15px;
+    position: relative;
+    text-decoration: none;
+}
+
+.navbar-main ul li a::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -6px;
+    width: 100%;
+    height: 2px;
+    background-color: #d10000;
+    transform: scaleX(0);
+    transform-origin: left;
+    transition: transform 0.3s ease;
+}
+
+.navbar-main ul li a:hover::after {
+    transform: scaleX(1);
 }
 
 .navbar-sub ul {
