--- a/beranda-overal.css
+++ b/beranda-overal.css
@@ -1,5 +1,151 @@
+
+
+.prestasi-terbaru {
+    display: flex;
+    gap: 5px;
+    border-bottom: 1px solid #e5e7eb;
+}
+
+.prestasi-terbaru a {
+    text-decoration: none;
+}
+
+.img-unila {
+    width: 100%;
+    object-fit: cover;
+    height: 300px;
+}
+
+.judul-unila {
+    margin: 0;
+    font-size: 16px;
+    color: #000;
+    font-weight: bold;
+}
+
+.deskripsi-unila-lanjutan {
+    color: #797979;
+    font-size: 14px;
+    margin-top: 0;
+}
+
+.prestasi-lanjutan {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 16px;
+}
+
+.prestasi-lanjutan>* {
+    width: calc(50% - 8px);
+}
+
+.prestasi-lanjutan a {
+    text-decoration: none;
+}
+
+.info-microweb {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
+
+.editor,
+.editor-kkn {
+    font-size: 12px;
+    color: #45b4f5;
+}
+
+.tanggal {
+    color: #797979;
+    margin: 0;
+}
+
+.judul-unila-lanjutan {
+    font-size: 14px;
+    color: #000;
+    font-weight: bold;
+}
+
+.hero-slider {
+  position: relative;
+  overflow: hidden;
+}
+
+.hero-track {
+  display: flex;
+  transition: transform .6s ease-in-out;
+}
+
+.hero-slide {
+  min-width: 100%;
+}
+
+.hero-image-box {
+  position: relative;
+}
+
+.hero-image {
+  width: 100%;
+  height: 500px;
+  object-fit: cover;
+  display: block;
+}
+
+/* OVERLAY */
+.hero-overlay {
+  position: absolute;
+  inset: 0;
+  padding: 16px;
+  background: linear-gradient(to top, rgba(0,0,0,.75), rgba(0,0,0,.1));
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  color: #fff;
+}
+
+.hero-category {
+  font-size: 12px;
+  text-transform: uppercase;
+}
+
+.hero-title {
+  font-size: 22px;
+  font-weight: bold;
+  margin: 6px 0;
+}
+
+.hero-meta {
+  font-size: 13px;
+  display: flex;
+  gap: 12px;
+}
+
+/* DOTS */
+.hero-dots {
+  position: absolute;
+  bottom: 15px;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+  gap: 8px;
+  z-index: 5;
+}
+
+.hero-dot {
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background: rgba(255,255,255,.5);
+  cursor: pointer;
+}
+
+.hero-dot.active {
+  background: #fff;
+}
+
+
 @media (max-width: 1237px) {
-    .berita-left{
+    .berita-left {
         display: none;
     }
 }
@@ -9,4 +155,7 @@
     .logo ul {
         display: none;
     }
+
 }
+
+@media (max-width: 768px) {}
