--- a/berita.microweb.css
+++ b/berita.microweb.css
@@ -47,6 +47,12 @@
     margin: 10px 0;
 }
 
+.img-microweb-terbaru {
+    width: 100%;
+    height: 250px;
+    object-fit: cover;
+}
+
 .tanggal-berita {
     font-size: 12px;
     color: #777;
