--- a/beranda-overal.css
+++ b/beranda-overal.css
@@ -152,7 +152,38 @@
   background: #fff;
 }
 
+.ekonomi {
+  padding: 0 20px 20px 20px;
+}
 
+.ekonomi a {
+  text-decoration: none;
+}
+
+.deskripsi {
+  color: #797979;
+  font-size: 15px;
+  margin-top: 0;
+}
+
+.img-microweb-terbaru {
+  width: 100%;
+  height: 250px;
+  object-fit: cover;
+  justify-items: center;
+}
+
+.info-microweb {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+.judul-ekonomi {
+  font-size: 15px;
+  font-weight: bold;
+  color: #000;
+}
 
 @media (max-width: 1237px) {
   .berita-left {
@@ -173,14 +204,14 @@
     padding: 10px;
     margin-top: 15px;
   }
-  
+
   .hero-slider {
     border-radius: 10px;
     box-shadow:
-    0 2px 8px rgba(0, 0, 0, 0.527),
-    0 8px 20px rgba(0, 0, 0, 0.521);
+      0 2px 8px rgba(0, 0, 0, 0.527),
+      0 8px 20px rgba(0, 0, 0, 0.521);
   }
-  
+
   .hero-image-box {
     height: 220px;
   }
