--- a/microweb.css
+++ b/microweb.css
@@ -182,8 +182,8 @@
     z-index: 10;
     transform: translateY(-3px);
     box-shadow:
-        0 2px 8px rgba(0,0,0,0.12),
-        0 8px 20px rgba(0,0,0,0.10);
+        0 2px 8px rgba(0, 0, 0, 0.12),
+        0 8px 20px rgba(0, 0, 0, 0.10);
     transition:
         transform 0.25s ease,
         box-shadow 0.25s ease;
@@ -225,9 +225,11 @@
         transform: translateX(30%);
         opacity: 0;
     }
+
     40% {
         opacity: 1;
     }
+
     100% {
         transform: translateX(0);
         opacity: 0;
@@ -239,9 +241,11 @@
         transform: translateX(-30%);
         opacity: 0;
     }
+
     40% {
         opacity: 1;
     }
+
     100% {
         transform: translateX(0);
         opacity: 0;
@@ -261,7 +265,7 @@
     gap: 5px;
 }
 
-.tanggal{
+.tanggal {
     color: #797979;
     margin: 0;
 }
@@ -358,12 +362,12 @@
     gap: 10px;
 }
 
-.home-staiab > * {
+.home-staiab>* {
     width: calc(50% - 5px);
 }
 
 
-.home-staiab a{
+.home-staiab a {
     text-decoration: none;
 }
 
@@ -376,15 +380,15 @@
 
 
 .kategori-staiab {
-  color: #DC0000;  
-  font-size: 12px;
+    color: #DC0000;
+    font-size: 12px;
 }
 
 .akademik a {
     color: #000;
     text-decoration: none;
     display: flex;
-     border-bottom: 1px solid #e5e7eb;
+    border-bottom: 1px solid #e5e7eb;
 }
 
 .akademik a p {
@@ -413,6 +417,94 @@
 
 #microweb-img {
     height: calc(100vh * 0.10);
+}
+
+.slider-microweb {
+    padding: 10px calc(13%);
+    margin-bottom: 15px;
+}
+
+.hero-slider {
+    position: relative;
+    overflow: hidden;
+}
+
+.hero-track {
+    display: flex;
+    transition: transform .6s ease-in-out;
+}
+
+.hero-slide {
+    min-width: 100%;
+}
+
+.hero-image-box {
+    position: relative;
+    height: 500px;
+    /* height sekarang di parent */
+}
+
+.hero-image {
+    width: 100%;
+    height: 100%;
+    /* mengikuti height parent */
+    object-fit: cover;
+    display: block;
+}
+
+/* OVERLAY */
+.hero-overlay {
+    position: absolute;
+    inset: 0;
+    padding: 16px;
+    background: linear-gradient(to top, rgba(0, 0, 0, .75), rgba(0, 0, 0, .1));
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    color: #fff;
+}
+
+.hero-category {
+    background-color: #DC0000;
+    padding: 5px 10px;
+    color: #fff;
+    width: fit-content;
+    font-size: 12px;
+}
+
+.hero-title {
+    font-size: 22px;
+    font-weight: bold;
+    margin: 6px 0;
+}
+
+.hero-meta {
+    font-size: 13px;
+    display: flex;
+    gap: 12px;
+}
+
+/* DOTS */
+.hero-dots {
+    position: absolute;
+    bottom: 15px;
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+    gap: 8px;
+    z-index: 5;
+}
+
+.hero-dot {
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background: rgba(255, 255, 255, .5);
+    cursor: pointer;
+}
+
+.hero-dot.active {
+    background: #fff;
 }
 
 @media (max-width: 768px) {
@@ -464,7 +556,7 @@
     .ubl-terbaru {
         width: 100%;
     }
-    
+
     .ubl-terbaru a {
         display: block;
         width: 100%;
@@ -493,6 +585,30 @@
 
     .deskripsi {
         display: none;
+    }
+
+    .slider {
+        padding: 10px;
+        margin-top: 15px;
+    }
+
+    .hero-slider {
+        border-radius: 10px;
+        box-shadow:
+            0 2px 8px rgba(0, 0, 0, 0.527),
+            0 8px 20px rgba(0, 0, 0, 0.521);
+    }
+
+    .hero-image-box {
+        height: 220px;
+    }
+
+    .hero-title {
+        font-size: 14px;
+    }
+
+    .hero-overlay {
+        justify-content: center;
     }
 }
 
