--- a/beranda.css
+++ b/beranda.css
@@ -1,5 +1,5 @@
 .container-beranda {
-    padding: 10px calc(15%);
+    padding: 10px calc((100% - 1200px) / 2);
     display: flex;
     gap: 10px;
     align-items: flex-start;
@@ -53,7 +53,6 @@
     text-decoration: none;
     display: flex;
     border-bottom: 1px solid #e5e7eb;
-    padding: 5px;
 }
 
 .hukum a p,
@@ -114,7 +113,7 @@
 }
 
 .lampung {
-    padding: 10px calc(15%);
+    padding: 10px calc((100% - 1200px) / 2);
     margin-bottom: 25px;
 }
 
