--- a/halaman.css
+++ b/halaman.css
@@ -1,5 +1,5 @@
 .container {
-    padding: 10px calc(13%);
+    padding: 10px calc((100% - 1200px) / 2);
     display: flex;
     gap: 10px;
     align-items: flex-start;
@@ -7,12 +7,15 @@
 
 .berita {
     width: 63%;
+    overflow: hidden;
+    padding: 10px;
 }
 
 .iklan-halaman {
-    width: 37%;
+    flex: 1;
     position: sticky;
     top: 10px;
+    padding: 10px;
 }
 
 .berita a {
