--- a/style.css
+++ b/style.css
@@ -338,16 +338,11 @@ body {
   padding: 15px 25px;
   border-bottom: 1px solid #e5e7eb;
   border-top: 1px solid #e5e7eb;
-
-  /* 🔥 WAJIB agar margin-left:auto berfungsi */
-  display: flex;
   align-items: center;
-  gap: 6px;
 }
 
 .input-menu {
   border: 1px solid #555555;
-  width: 100%;
   display: flex;
 }
 
@@ -513,10 +508,6 @@ body {
     flex-wrap: wrap;
 }
 
-.footer-left img {
-    height: calc(100vh * 0.15);
-}
-
 .footer-center {
     display: grid;
     row-gap: 10px;
@@ -599,7 +590,7 @@ body {
 }
 
 .iklan-gambar {
-    padding: 10px calc(18%);
+    padding: 10px calc((100% - 1200px) / 2);
     margin-top: 10px;
 }
 
@@ -730,7 +721,7 @@ body {
 }
 
 .gaya-hidup {
-    padding: 10px calc(15%);
+    padding: 10px calc((100% - 1200px) / 2);
     margin-bottom: 25px;
 }
 
