--- a/style.css
+++ b/style.css
@@ -160,6 +160,8 @@ body {
     padding: 8px 15px;
     display: block;
     color: #000;
+    position: relative;
+    z-index: 9999;
 }
 
 
@@ -365,6 +367,7 @@ body {
 }
 
 #input-sidebar {
+    background-color: #fff;
     outline: none;
     font-size: 14px;
     border: none;
