--- a/beranda.css
+++ b/beranda.css
@@ -83,8 +83,9 @@
     position: absolute;
     bottom: 0;
     left: 0;
-    width: 100%;
     padding: 14px;
+    width: 100%;
+    box-sizing: border-box;
     background: linear-gradient(to top,
             rgba(0, 0, 0, 0.7),
             rgba(0, 0, 0, 0));
@@ -230,6 +231,10 @@
     }
 
     .card-meta span {
+        font-size: 12px;
+    }
+
+    .card-text {
         font-size: 14px;
     }
 
